# qt-brohub

./: README.md  setup.cfg  setup.py
src/brohub/: compiled.pyi
tests/: test_harmonic_mean.py
