[metadata]
name = qt-brohub
version = 0.0.1
description = Python Broker API client, not your typical bro, but definitely the one you need for trading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QuantTrade-io/qt-brohub
author = Joris Jansen
author_email = "Joris Jansen" <github@tpotjj.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 88

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = brohub
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    brohub
    */site-packages/brohub

[tox:tox]
envlist = py310,py311
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:brohub tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff brohub tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:brohub testpaths}
